--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,11 @@
+/* IMport Font*/
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Macondo&display=swap');
+
+
 body {
-    background-color: lightskyblue;
+    font-family: "Inter";
+}
+
+h1 {
+    font-family: "Macondo";
 }
