--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,15 @@ h3 {
     color: var(--heighlight-color);
 }
 
+/* Navbar */
+#navbar {
+    background-color: var(--primary-color);
+}
+
+#navbar .logo {
+    width: 30px;
+}
+
 /* grid visualisation CSS for testing
 
 .container,
