--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,16 @@ h2,
 h3 {
     font-family: var(--secondary-font);
     color: var(--primary-color);
+
+}
+
+h1,
+h2 {
     text-transform: uppercase;
+}
+
+h2 {
+    margin-bottom: 2rem;
 }
 
 .sub-heading-color {
@@ -50,6 +59,17 @@ h3 {
 
 #header .lead {
     font-family: var(--secondary-font);
+}
+
+/* Services */
+#services .card-footer {
+    font-weight: bold;
+    color: var(--heighlight-color);
+    background-color: transparent;
+}
+
+#services .card {
+    margin-bottom: 1.5rem;
 }
 
 /* grid visualisation CSS for testing
