--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,5 +83,42 @@ h2 {
     border: 2px solid white;
     background-color: lightgray;
 }
-
 */
+
+/* Media queries */
+
+/* Medium devices (tablets, 768px and up) */
+@media screen and (min-width: 768px) {
+
+    /* Make all services cards the same height for consistency */
+    #services .card-body {
+        min-height: 191px;
+    }
+}
+
+/* Medium devices (small laptops, 992px and up) */
+@media screen and (min-width: 992px) {
+
+    /* Make all services cards the same height for consistency */
+    #services .card-body {
+        min-height: auto;
+    }
+}
+
+/* Medium devices (large desktops, 1200px and up) */
+@media screen and (min-width: 1200px) {
+
+    /* Make all services cards the same height for consistency */
+    #services .card-body {
+        min-height: 220px;
+    }
+}
+
+/* Medium devices (larger desktops, 1400px and up) */
+@media screen and (min-width: 1400px) {
+
+    /* Make all services cards the same height for consistency */
+    #services .card-body {
+        min-height: 195px;
+    }
+}
