--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,6 @@
     /* light blue*/
 }
 
-
 body {
     font-family: var(--primary-font);
 }
@@ -44,6 +43,31 @@ h2 {
 .section {
     margin-top: 3rem;
     margin-bottom: 2rem;
+}
+
+/* Buttons */
+
+.custom-button-filled {
+    border: 2px solid var(--heighlight-color);
+    background-color: var(--heighlight-color);
+    color: white;
+}
+
+.custom-button-filled:hover {
+    border: 2px solid var(--secondary-color);
+    background-color: var(--secondary-color);
+    color: white;
+}
+
+.custom-button-outline {
+    border: 3px solid var(--heighlight-color);
+    padding: 7px 25px;
+    color: var(--heighlight-color);
+}
+
+.custom-button-outline:hover {
+    border: 3px solid var(--heighlight-color);
+    color: white;
 }
 
 /* Navbar */
