--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,8 +15,11 @@
     /* light blue*/
 }
 
+/* Global styles */
+
 body {
     font-family: var(--primary-font);
+    padding-top: 57.15px;
 }
 
 h1,
@@ -96,6 +99,23 @@ h2 {
     margin-bottom: 1.5rem;
 }
 
+/* Events */
+#events .table {
+    font-size: 0.7rem;
+}
+
+.student-discount {
+    background-color: var(--heighlight-color);
+    font-weight: bold;
+    color: white;
+    display: block;
+    max-width: 300px;
+    margin: auto;
+    padding: 5px 10px;
+    font-size: 0.8rem;
+}
+
+
 /* Game library cards */
 #new-games .card,
 #fav-games .card {
@@ -152,6 +172,17 @@ h2 {
 */
 
 /* Media queries */
+
+/* Small screens and up */
+@media screen and (min-width: 576px) {
+    /* increase font size in events table when screen size is large enough */
+    #events .table {
+        font-size: 1rem;
+    }
+    .student-discount {
+        font-size: 1rem;
+    }
+}
 
 /* Medium devices (tablets, 768px and up) */
 @media screen and (min-width: 768px) {
